--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Mountain life -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Kentucky -- Fiction'
+- GITenberg
 title: A Pagan of the Hills
 url: http://www.gutenberg.org/ebooks/19089
